force-app/main/default/objects/Case/fields/Lifestyle_Preference__c.field-meta.xml
<CustomField>
    <fullName>Lifestyle_Preference__c</fullName>
    <label>Lifestyle Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>