force-app/main/default/objects/Case/fields/Marketing_Cloud_sync__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Cloud sync</label>
    <type>Checkbox</type>
</CustomField>