force-app/main/default/objects/Case/fields/My_Repairs__c.field-meta.xml
<CustomField>
    <fullName>My_Repairs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please be sure to fill this field otherwise the Operation Exception will not appear on the Distant Care Service</inlineHelpText>
    <label>Care Service</label>
    <referenceTo>CareService__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>