force-app/main/default/objects/Case/fields/My_Store__c.field-meta.xml
<CustomField>
    <fullName>My_Store__c</fullName>
    <description>Checks whether the connected user&apos;s store and the store completed in the request are the same</description>
    <formula>Store__r.RetailStoreId__c  = TEXT($User.DefaultStore__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Store</label>
    <type>Checkbox</type>
</CustomField>