force-app/main/default/objects/Case/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <formula>IMAGE(
CASE (  Type ,

&quot;Product Information&quot;,&quot;/resource/CaseImagesNature/CaseImagesNature/ProductInformation.png&quot;,
&quot;Service and General Information&quot;,&quot;/resource/CaseImagesNature/CaseImagesNature/ServiceGeneralInformation.png&quot;,
&quot;Sales&quot;,&quot;/resource/CaseImagesNature/CaseImagesNature/Sales.png&quot;,
&quot;Complaints&quot;,&quot;/resource/CaseImagesNature/CaseImagesNature/Complaints.png&quot;,
&quot;Events and Editorials&quot;,&quot;/resource/CaseImagesNature/CaseImagesNature/Events.png&quot;,
&quot;Congratulations&quot;,&quot;/resource/CaseImagesNature/CaseImagesNature/Congratulations.png&quot;,
&quot;/s.gif&quot;),&quot;Nature&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nature</label>
    <type>Text</type>
</CustomField>