force-app/main/default/objects/Case/fields/Open_and_Close_same_day__c.field-meta.xml
<CustomField>
    <fullName>Open_and_Close_same_day__c</fullName>
    <description>Created for reporting</description>
    <formula>Datevalue(ClosedDate) = Datevalue(CreatedDate)</formula>
    <label>Open and Close same day</label>
    <type>Checkbox</type>
</CustomField>