force-app/main/default/objects/Case/fields/Order_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping group (New format)</label>
    <referenceTo>OrderShipping__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>