force-app/main/default/objects/Case/fields/Origin_of_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Origin_of_Escalation__c</fullName>
    <label>Origin of Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
                <default>true</default>
                <label>Digital</label>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>