force-app/main/default/objects/Case/fields/Parcel_status__c.field-meta.xml
<CustomField>
    <fullName>Parcel_status__c</fullName>
    <label>Parcel status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost item</fullName>
            </value>
            <value>
                <fullName>Damaged item</fullName>
            </value>
            <value>
                <fullName>Missing item</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>