force-app/main/default/objects/Case/fields/PoD_Category__c.field-meta.xml
<CustomField>
    <fullName>PoD_Category__c</fullName>
    <description>Category picklist for Demand on Product without Sku</description>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAR</fullName>
                <label>MAR(Leather goods)</label>
            </value>
            <value>
                <fullName>RIG</fullName>
                <label>RIG (Rigide)</label>
            </value>
            <value>
                <fullName>ACC</fullName>
                <label>ACC (Accessories)</label>
            </value>
            <value>
                <fullName>RTW</fullName>
                <label>RTW (ReadyToWear)</label>
            </value>
            <value>
                <fullName>SHO</fullName>
                <label>SHO (Shoe)</label>
            </value>
            <value>
                <fullName>WAT</fullName>
                <label>WAT (Watch)</label>
            </value>
            <value>
                <fullName>JWL</fullName>
                <label>JWL (Jewelry)</label>
            </value>
            <value>
                <fullName>BLT</fullName>
                <label>BLT (Belts)</label>
            </value>
            <value>
                <fullName>EYE</fullName>
                <label>EYE (Eyewear)</label>
            </value>
            <value>
                <fullName>KEY</fullName>
                <label>KEY (Keys)</label>
            </value>
            <value>
                <fullName>PEN</fullName>
                <label>PEN (Pen)</label>
            </value>
            <value>
                <fullName>TEX</fullName>
                <label>TEX (Textile)</label>
            </value>
            <value>
                <fullName>UMB</fullName>
                <label>UMB (Umbrella)</label>
            </value>
            <value>
                <fullName>PET</fullName>
                <label>PET (Small leather goods)</label>
            </value>
            <value>
                <fullName>HOM</fullName>
                <label>HOM (Furniture And Decoration)</label>
            </value>
            <value>
                <fullName>COS</fullName>
                <label>COS (Perfume And Cosmetics)</label>
            </value>
            <value>
                <fullName>CUL</fullName>
                <label>CUL (Cultural Products)</label>
            </value>
            <value>
                <fullName>EXO</fullName>
                <label>EXO (Exotics)</label>
            </value>
            <value>
                <fullName>Accessories</fullName>
                <isActive>false</isActive>
                <label>Accessories</label>
            </value>
            <value>
                <fullName>Find Jewellery</fullName>
                <isActive>false</isActive>
                <label>Find Jewellery</label>
            </value>
            <value>
                <fullName>Gifting</fullName>
                <isActive>false</isActive>
                <label>Gifting</label>
            </value>
            <value>
                <fullName>Leather Goods, Voyage</fullName>
                <isActive>false</isActive>
                <label>Leather Goods, Voyage</label>
            </value>
            <value>
                <fullName>Objets Nomades, Petits Nomades</fullName>
                <isActive>false</isActive>
                <label>Objets Nomades, Petits Nomades</label>
            </value>
            <value>
                <fullName>Perfumes</fullName>
                <isActive>false</isActive>
                <label>Perfumes</label>
            </value>
            <value>
                <fullName>Ready to wear (RTW)</fullName>
                <isActive>false</isActive>
                <label>Ready to wear (RTW)</label>
            </value>
            <value>
                <fullName>Shoes</fullName>
                <isActive>false</isActive>
                <label>Shoes</label>
            </value>
            <value>
                <fullName>Small Leather Goods</fullName>
                <isActive>false</isActive>
                <label>Small Leather Goods</label>
            </value>
            <value>
                <fullName>Watches</fullName>
                <isActive>false</isActive>
                <label>Watches</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>