force-app/main/default/objects/Case/fields/PoD_Gender__c.field-meta.xml
<CustomField>
    <fullName>PoD_Gender__c</fullName>
    <description>Gender for Demand on Product without sku</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Unisex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>