force-app/main/default/objects/Case/fields/POD_Product_Available_Date__c.field-meta.xml
<CustomField>
    <fullName>POD_Product_Available_Date__c</fullName>
    <description>When the stage of Product on Demand with sku becomes Product Available, the process builder Case Stage complete this field</description>
    <label>POD Product Available Date</label>
    <type>DateTime</type>
</CustomField>