force-app/main/default/objects/Case/fields/PprLinked__c.field-meta.xml
<CustomField>
    <fullName>PprLinked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PprLinked</label>
    <referenceTo>PPR_PurchProduct__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>