force-app/main/default/objects/Case/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price of MyPR or Waiting List</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>