force-app/main/default/objects/Case/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>IMAGE(
IF( High_Priority__c = True, &quot;/img/samples/flag_red.gif&quot;,
IF(RecordType.DeveloperName == &quot;Operation_Exception&quot; &amp;&amp; Current_Status_Age__c &lt; 1, &quot;/img/samples/flag_green.gif&quot;,
IF(RecordType.DeveloperName == &quot;Operation_Exception&quot; &amp;&amp; Current_Status_Age__c &gt;= 1 &amp;&amp; Current_Status_Age__c &lt; 2, &quot;/servlet/servlet.FileDownload?file=0156S00000JKtww&quot;,
IF(RecordType.DeveloperName == &quot;Operation_Exception&quot; &amp;&amp; Current_Status_Age__c &gt;= 2, &quot;/servlet/servlet.FileDownload?file=0156S00000JKtwx&quot;,
IF(
OR(ISPICKVAL( Account.Ind_10K__c , &quot;10K&quot;), ISPICKVAL( Account.Ind_10K__c , &quot;Potential 10K&quot;)),
&quot;/img/samples/flag_yellow.gif&quot;,
&quot;/s.gif&quot;))))),
&quot;Priority Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&quot;High priority&quot; indicator used for MyPR and Waiting List
Red: Check box High Priority
Yellow: Client 10K or Potential 10K</inlineHelpText>
    <label>Priority Flag</label>
    <type>Text</type>
</CustomField>