force-app/main/default/objects/Case/fields/Product_Color__c.field-meta.xml
<CustomField>
    <fullName>Product_Color__c</fullName>
    <formula>Product_Sku__r.MacroColorName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Color</label>
    <type>Text</type>
</CustomField>