force-app/main/default/objects/Case/fields/Product_Function__c.field-meta.xml
<CustomField>
    <fullName>Product_Function__c</fullName>
    <formula>Product_Sku__r.FunctionName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Function</label>
    <type>Text</type>
</CustomField>