force-app/main/default/objects/Case/fields/Product_Gender__c.field-meta.xml
<CustomField>
    <fullName>Product_Gender__c</fullName>
    <formula>IF (
 Product_Sku__r.GenderMen__c = True, &quot;Men&quot;,
IF (
 Product_Sku__r.GenderWomen__c = True, &quot;Women&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Gender</label>
    <type>Text</type>
</CustomField>