force-app/main/default/objects/Case/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>IMAGE ( Product_Sku__r.Image1Url__c ,&quot;image not available&quot;, 100, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>