force-app/main/default/objects/Case/fields/Product_Location__c.field-meta.xml
<CustomField>
    <fullName>Product_Location__c</fullName>
    <formula>IF(TEXT(My_Repairs__r.destination__c) = &quot;156RASS&quot;, &quot;After Sales Center Ontario&quot;,
IF(TEXT(My_Repairs__r.destination__c) = &quot;156RAS2&quot;, &quot;After Sales Center Piscataway&quot;,
IF(TEXT(My_Repairs__r.destination__c) = &quot;156RAS3&quot;, &quot;After Sales Center Legacy 1854&quot;,
IF(TEXT(My_Repairs__r.destination__c) = &quot;101RASS&quot;, &quot;After Sales Center Cergy&quot;,
IF(TEXT(My_Repairs__r.destination__c) = &quot;F92HUB&quot;, &quot;UK Local Repair Center&quot;,
IF(TEXT(My_Repairs__r.destination__c) = &quot;179RASS&quot;, &quot;After Sales Center Shanghai&quot;,
IF(TEXT(My_Repairs__r.destination__c) = &quot;172RASS&quot;, &quot;After Sales Center Singapore&quot;,
IF(TEXT(My_Repairs__r.destination__c) = &quot;L48HUB&quot;, &quot;AU Local Repair Center&quot;,
IF(TEXT(My_Repairs__r.destination__c) = &quot;186RASS&quot;, &quot;After Sales Center Seoul&quot;,
&quot; &quot;
)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>