force-app/main/default/objects/Case/fields/Product_Sku_unknown__c.field-meta.xml
<CustomField>
    <fullName>Product_Sku_unknown__c</fullName>
    <description>Used for Case when the product sku is unknown by the CA</description>
    <label>Product SKU Unknown</label>
    <length>100</length>
    <type>Text</type>
</CustomField>