force-app/main/default/objects/Case/fields/Prospect_created__c.field-meta.xml
<CustomField>
    <fullName>Prospect_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the &quot;Create Prospect&quot; button has been clicked</description>
    <label>Prospect created</label>
    <type>Checkbox</type>
</CustomField>