force-app/main/default/objects/Case/fields/PurchasedProduct__c.field-meta.xml
<CustomField>
    <fullName>PurchasedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[ICONiCS] Link to Purchase (CSC impact on LV purchases)</description>
    <label>Purchased Product</label>
    <referenceTo>PPR_PurchProduct__c</referenceTo>
    <relationshipLabel>Requests (Purchased Product)</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>