force-app/main/default/objects/Case/fields/Reason_of_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_cancellation__c</fullName>
    <label>Reason of cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>Client Cancelled</fullName>
            </value>
            <value>
                <fullName>No Follow-up</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
            <value>
                <fullName>No Response from Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>