force-app/main/default/objects/Case/fields/Rejection_Type__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Type__c</fullName>
    <description>Rejection Type for Approval Case</description>
    <label>Rejection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>