force-app/main/default/objects/Case/fields/Request_Age__c.field-meta.xml
<CustomField>
    <fullName>Request_Age__c</fullName>
    <formula>IF (  OR(ISPICKVAL( Status , &quot;Closed&quot;),
ISPICKVAL( Status , &quot;Approved&quot;),
ISPICKVAL( Status , &quot;Approved &amp; Fulfilled&quot;),
ISPICKVAL( Status , &quot;Cancelled&quot;),
ISPICKVAL( Status , &quot;Merged&quot;),
ISPICKVAL( Status , &quot;My Product on Demand (with sku) created&quot;),
ISPICKVAL( Status , &quot;Not Interested&quot;),
ISPICKVAL( Status , &quot;Rejected&quot;),
ISPICKVAL( Status , &quot;Successful&quot;)
),  ClosedDate - CreatedDate ,  NOW() -  CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Days)</inlineHelpText>
    <label>Request Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>