force-app/main/default/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Response</fullName>
            </value>
            <value>
                <fullName>Request Creation (MyCR - POD - Request)</fullName>
                <label>Request Creation (MyCR - POD - Request - DCS)</label>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Reply to be made by CSC</fullName>
            </value>
            <value>
                <fullName>Reply Made</fullName>
            </value>
            <value>
                <fullName>Request to Store</fullName>
            </value>
            <value>
                <fullName>Transfer to Store</fullName>
            </value>
            <value>
                <fullName>Sent Catalogue_Brochure_TYC_Invitation</fullName>
                <label>Sent Catalogue/ Brochure/ TYC/ Invitation</label>
            </value>
            <value>
                <fullName>Transfer to Headquarters</fullName>
            </value>
            <value>
                <fullName>No Response Required</fullName>
            </value>
            <value>
                <fullName>Book an Appointment</fullName>
            </value>
            <value>
                <fullName>Client Interested or confirmed</fullName>
            </value>
            <value>
                <fullName>Client Reached</fullName>
            </value>
            <value>
                <fullName>Client not interested</fullName>
            </value>
            <value>
                <fullName>Immediate Transaction</fullName>
            </value>
            <value>
                <fullName>Send Mail Card (sample)</fullName>
            </value>
            <value>
                <fullName>Call back another time</fullName>
            </value>
            <value>
                <fullName>Cut Call / Wrong Number</fullName>
            </value>
            <value>
                <fullName>POD with Sku</fullName>
            </value>
            <value>
                <fullName>Send (e-) Business Card</fullName>
            </value>
            <value>
                <fullName>Not available / Voice mail left</fullName>
            </value>
            <value>
                <fullName>Do not disturb / Do not call back</fullName>
            </value>
            <value>
                <fullName>POD without Sku</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>Operation Exception</fullName>
            </value>
            <value>
                <fullName>Distant Care Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>