force-app/main/default/objects/Case/fields/Second_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Follow_Up_Date__c</fullName>
    <label>2nd Follow Up Date</label>
    <type>DateTime</type>
</CustomField>