force-app/main/default/objects/Case/fields/Segment_Client__c.field-meta.xml
<CustomField>
    <fullName>Segment_Client__c</fullName>
    <formula>TEXT(Account.Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Client</label>
    <type>Text</type>
</CustomField>