force-app/main/default/objects/Case/fields/Sent_to_IPD__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_IPD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if whether or not the emails have been transfered to IPD. It is set to true right after the email is sent</description>
    <label>Sent to IPD</label>
    <type>Checkbox</type>
</CustomField>