force-app/main/default/objects/Case/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prelaunch Access</fullName>
            </value>
            <value>
                <fullName>Personal Stylist</fullName>
            </value>
            <value>
                <fullName>Virtual bridges &amp; Events</fullName>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
            <value>
                <fullName>Craftmanship Access</fullName>
            </value>
            <value>
                <fullName>Appointment Booking Access</fullName>
            </value>
            <value>
                <fullName>Gifting Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>