force-app/main/default/objects/Case/fields/Shipping_group__c.field-meta.xml
<CustomField>
    <fullName>Shipping_group__c</fullName>
    <description>Used for Exception Manager record type</description>
    <inlineHelpText>18 digit max, use description box for details</inlineHelpText>
    <label>Shipping group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>