force-app/main/default/objects/Case/fields/Shipping_group_formula__c.field-meta.xml
<CustomField>
    <fullName>Shipping_group_formula__c</fullName>
    <formula>Shipping_group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping group</label>
    <type>Text</type>
</CustomField>