force-app/main/default/objects/Case/fields/Shipping_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Group_Number__c</fullName>
    <description>To Help search for Shipping group Lookup</description>
    <label>Shipping Group Number (New Format)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>