force-app/main/default/objects/Case/fields/SourceLocation__c.field-meta.xml
<CustomField>
    <fullName>SourceLocation__c</fullName>
    <formula>Order_Shipping__r.Source_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Location</label>
    <type>Text</type>
</CustomField>