force-app/main/default/objects/Case/fields/Spam__c.field-meta.xml
<CustomField>
    <fullName>Spam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Categorized as SPAM</label>
    <type>Checkbox</type>
</CustomField>