force-app/main/default/objects/Case/fields/SpamReason__c.field-meta.xml
<CustomField>
    <fullName>SpamReason__c</fullName>
    <description>[ICONiCS] Reason for spamming the Case</description>
    <label>Spam Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid Email</fullName>
            </value>
            <value>
                <fullName>Invalid Subject</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>