force-app/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>Used for Exception Manager record type</description>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blind - RA missing</fullName>
                <label>Blind / RA missing</label>
            </value>
            <value>
                <fullName>Worn</fullName>
            </value>
            <value>
                <fullName>DEF</fullName>
            </value>
            <value>
                <fullName>Counterfeit</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
                <label>Carrier claim</label>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Bounce Back</fullName>
            </value>
            <value>
                <fullName>Stock DEF</fullName>
            </value>
            <value>
                <fullName>Stock 0</fullName>
            </value>
            <value>
                <fullName>Manual cancellation</fullName>
            </value>
            <value>
                <fullName>Aucilliary Item</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
            <value>
                <fullName>Product Specification</fullName>
            </value>
            <value>
                <fullName>Pick-up</fullName>
            </value>
            <value>
                <fullName>Click_&amp;_Collect</fullName>
                <label>Click &amp; Collect</label>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>GC/HS/Packaging</fullName>
            </value>
            <value>
                <fullName>Delayed refund</fullName>
            </value>
            <value>
                <fullName>Chargebacks</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Stationary</fullName>
            </value>
            <value>
                <fullName>Tax Invoice</fullName>
            </value>
            <value>
                <fullName>Second Look</fullName>
            </value>
            <value>
                <fullName>Carrier Claim (UPS/DHL/FS Express...)</fullName>
            </value>
            <value>
                <fullName>Shipping Update (reroute, return to sender)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>