force-app/main/default/objects/Case/fields/Sub_Segment_Client__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment_Client__c</fullName>
    <formula>TEXT(Account.Sub_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Segment Client</label>
    <type>Text</type>
</CustomField>