force-app/main/default/objects/Case/fields/TECH_BO_Case_Team__c.field-meta.xml
<CustomField>
    <fullName>TECH_BO_Case_Team__c</fullName>
    <description>Used for reporting on Operation Exception record type cases</description>
    <label>TECH BO Case Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>