force-app/main/default/objects/Case/fields/TECH_ChinaVisibility__c.field-meta.xml
<CustomField>
    <fullName>TECH_ChinaVisibility__c</fullName>
    <label>TECH_ChinaVisibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
                <default>true</default>
                <label>NULL</label>
            </value>
            <value>
                <fullName>NOT_CN</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>INT_CN_ATT</fullName>
            </value>
            <value>
                <fullName>INT_CN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>