force-app/main/default/objects/Case/fields/TECH_Country__c.field-meta.xml
<CustomField>
    <fullName>TECH_Country__c</fullName>
    <description>Pick Value Set Country feed this field</description>
    <label>TECH Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>