force-app/main/default/objects/Case/fields/TECH_CTI_Extension_Number__c.field-meta.xml
<CustomField>
    <fullName>TECH_CTI_Extension_Number__c</fullName>
    <description>Field for PowerBI. Store Extension number from Case owner</description>
    <formula>Owner:User.cnx__Agent_Phone_Extension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH CTI Extension Number</label>
    <type>Text</type>
</CustomField>